Changelog
=========

2019.4.0rc3 (unreleased)
------------------------

- Rename label and values of the privacy layer field. [phgross]
- Prevent copy / paste of checked out documents. [njohner]
- Bump ftw.solr to 2.6.1 to get fix path_depth handling. [phgross]
- Handle special characters in link to advanced search. [njohner]
- Correctly handle inactive groups in the sharing view. [njohner]
- Drop custom model forms for proposals and create proposal model via event handler. [deiferni]
- Include original files in ech0160 SIP export even when archival_file exists. [njohner]
- Add filename and checked_out fields to recently-touched endpoint. [njohner]
- Add new registry field to switch between changed and document_date for dossier end date calculation. [njohner]


2019.4.0rc2 (2019-08-21)
------------------------

- Introduce `IBaseProposal` class, `ISubmittedProposal` no longer inherits from `IProposal`. [deiferni]
- Bump ftw.solr to 2.6.0 to get fix for metadata getting overwritten by extract handler. [lgraf]
- Move remaining proposal model fields to plone content type. [deiferni]
- Implement FTPSTransport for uploading SIPs to FTPS server. [lgraf]
- Display keywords in Mail overview. [njohner]
- Bump ftw.keywordwidget to 2.1.0 to use async mode of keyword widgets for document and dossier keywords. [njohner]
- Fix an issue where it was no longer possible to modify a workspace as a workspace owner. [elioschmutz]
- Fix workspace participation restapi to handle new payload format for post and patch requests due to the new plone.restapi. [elioschmutz]
- Add response support for ToDos. [phgross]
- Update workflow security for opengever_workspace workflow to fix permission on existing workspaces. [elioschmutz]
- Remove userid from the users fullname in all teamraum sources. [phgross]
- Move task reminders of responsibles to the successor, when accepting a multi admin unit task. [phgross]
- Bump ftw.tabbedview version to 4.1.3 [njohner]